alarm, daemon: Avoid using %m for errors

It is a GNU extension and causes build problems and failures in other
libc implementations (such as BSD libc).

https://bugzilla.gnome.org/show_bug.cgi?id=761262